[gd_scene load_steps=9 format=3 uid="uid://c1118cqtdm1xd"]

[ext_resource type="Texture2D" uid="uid://pqw4p130xr0g" path="res://UI/HUD/reticle.png" id="1_1fxo2"]
[ext_resource type="Script" path="res://UI/HUD/hud.gd" id="1_f63ty"]
[ext_resource type="PackedScene" uid="uid://bs8u5dly1knov" path="res://UI/menu/gameover.tscn" id="3_5hp2p"]
[ext_resource type="FontFile" uid="uid://bbl7j4o5fvnwj" path="res://UI/emotion-engine-18002/EmotionEngine-8ynA.ttf" id="3_q4qw3"]
[ext_resource type="Texture2D" uid="uid://tvtqx6u6wo1m" path="res://UI/HUD/heart.png" id="4_rql76"]
[ext_resource type="Texture2D" uid="uid://dx56u3l4xliv3" path="res://UI/HUD/blood.png" id="5_wf5jt"]
[ext_resource type="Texture2D" uid="uid://2ud0irekr1r2" path="res://UI/HUD/bullet.png" id="6_am2f0"]
[ext_resource type="PackedScene" uid="uid://d0qpk7iqv04tn" path="res://Slot Machine/Slot.tscn" id="8_nvtfo"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_f63ty")

[node name="Reticle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1fxo2")
expand_mode = 1
stretch_mode = 5

[node name="Piss_Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 23.0
offset_right = 20.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="Piss_Label" type="Label" parent="Piss_Control"]
visible = false
layout_mode = 0
offset_left = -18.0
offset_top = -9.0
offset_right = 90.0
offset_bottom = 14.0
theme_override_fonts/font = ExtResource("3_q4qw3")
text = "Q to PISS"

[node name="ProgressBar" type="ProgressBar" parent="Piss_Control"]
visible = false
layout_mode = 0
offset_left = -87.0
offset_top = 22.0
offset_right = 39.0
offset_bottom = 49.0
scale = Vector2(1.76, 1)
max_value = 1000.0

[node name="Interaction" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="InteractLabel" type="Label" parent="Interaction"]
z_index = 20
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -146.0
offset_top = 122.0
offset_right = 155.0
offset_bottom = 167.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 40
text = "E to INTERACT idiot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gameover" parent="." instance=ExtResource("3_5hp2p")]
process_mode = 3
visible = false
layout_mode = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -2.0
offset_top = 791.0
offset_right = 38.0
offset_bottom = 831.0

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = 466.0
offset_right = 1037.0
offset_bottom = 1417.0
grow_vertical = 0
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_rql76")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 418.0
offset_right = 993.0
offset_bottom = 1369.0
grow_vertical = 0
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_wf5jt")

[node name="HealthCount_Label" type="Label" parent="Control"]
layout_mode = 2
offset_left = -394.0
offset_top = 607.0
offset_right = 598.0
offset_bottom = 649.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -817.0
offset_right = 47.0
offset_bottom = -777.0
grow_vertical = 0

[node name="TextureRect2" type="TextureRect" parent="Control2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = 466.0
offset_right = 1037.0
offset_bottom = 1417.0
grow_vertical = 0
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_am2f0")

[node name="TextureRect" type="TextureRect" parent="Control2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 418.0
offset_right = 993.0
offset_bottom = 1369.0
grow_vertical = 0
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_wf5jt")

[node name="AmmoCount_Label" type="Label" parent="Control2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 577.0
offset_right = 104.0
offset_bottom = 619.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 30
text = "6 / 6"
horizontal_alignment = 1

[node name="KillCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 27.0
offset_right = 140.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 30
text = "Kill Count:"

[node name="POWERLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 60.0
offset_right = 141.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 30
text = "POWER:"

[node name="ControlLabel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -20.0
offset_right = -16.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="ControlLabel"]
layout_mode = 0
offset_left = -188.0
offset_top = -11.0
offset_right = 22.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 20
text = "1 Pistol, 2 Shotgun, F Melee"

[node name="Control3" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_top = 24.0
offset_right = -26.0
offset_bottom = 64.0
grow_horizontal = 0

[node name="Label" type="Label" parent="Control3"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -268.0
offset_bottom = 153.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_q4qw3")
theme_override_font_sizes/font_size = 20
text = "Quests:
Use vending machine ( gas station)
Drink from keg (bar)
Say hello to NPCs
Use slot machine (bar)
Explore the farm
Use all powerups!"

[node name="SlotUI" parent="." instance=ExtResource("8_nvtfo")]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -573.0
offset_top = -324.5
offset_right = 573.0
offset_bottom = 324.5
grow_horizontal = 2
grow_vertical = 2
